added search bar

--- a/index.html
+++ b/index.html
@@ -213,6 +213,23 @@
       <button class="theme-toggle" id="themeToggle">Switch Theme</button>
     </div>
 
+    <div class="search-container">
+      <input type="text" id="searchInput" placeholder="Search for system information...">
+      <select id="categoryFilter">
+        <option value="all">All Categories</option>
+        <option value="browser">Browser & Device</option>
+        <option value="system">System Information</option>
+        <option value="network">Network</option>
+        <option value="display">Display & Graphics</option>
+        <option value="features">Features & Capabilities</option>
+        <option value="storage">Storage & Performance</option>
+        <option value="media">Media Devices</option>
+        <option value="hardware">Hardware</option>
+        <option value="power">Power Management</option>
+        <option value="networkStats">Network Statistics</option>
+      </select>
+    </div>
+
     <div id="results">
       <!-- Sections will be inserted here by JavaScript -->
     </div>
