--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     }
 
     .export-button {
+      display: none;
       padding: 8px 16px;
       background: var(--accent);
       color: white;
