--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       padding: 15px 20px;
       border-radius: 8px 8px 0 0;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
     }
 
